# test-config

./: Cargo.toml  LICENSE.md  README.md
config/: default.toml  testing.toml
config/elasticsearch/: mappings.json  settings.json
logs/: mimir.log.2021-09-10
src/: main.rs  server.rs  settings.rs
