[package]
name = "test-config"
version = "0.1.0"
authors = ["crocme10 <matt@area403.org>"]
edition = "2018"
description = "Testing configuration features"
license = "MIT"
repository = "http://github.com/crocme10/test-config.git"
keywords = [ "application", "command-line" ]
categories = [ "application" ]
readme = "README.md"

[dependencies]
clap = "2.33.1"
config = { git = "https://github.com/mehcode/config-rs", branch = "master" }
snafu = { version = "0.6.10", features = [ "futures" ] }
serde = {version = "1", features = ["rc"]}
serde_json = "1"
tokio = { version = "1.6.0", features = [ "sync", "rt-multi-thread", "macros", "process" ] }
tracing = "0.1.26"
tracing-appender = "0.1.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.17"
tracing-bunyan-formatter = { version = "0.2.6", default-features = false }
tracing-log = "0.1.2"
